[package]
name = "zabbix-influx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
flate2 = "1.0.27"
futures-util = "0.3.28"
influxdb = { version = "0.7.0", features = ["influxdb_derive", "derive"] }
rust_decimal = { version = "1.32.0", features = ["tokio-pg"] }
serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = "0.7.10"
toml = "0.7.6"
